tests/negative/issue3161/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@?{
    name := "stdlib";
    version := mkVersion 0 0 1;
    dependencies := []
  };
